[project]
name = "PicImageSearch"
dynamic = ["version"]
description = "PicImageSearch APIs for Python 3.x 适用于 Python 3 以图搜源整合API"
readme = "README.md"
authors = [
    { name = "kitUIN", email = "kulujun@gmail.com" },
]
maintainers = [
    { name = "kitUIN", email = "kulujun@gmail.com" },
    { name = "lleans" },
    { name = "chinoll" },
    { name = "NekoAria" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.28.1",
    "lxml>=5.3.1",
    "pyquery>=2.0.1",
]
keywords = [
    "ascii2d",
    "baidu",
    "bing",
    "copyseeker",
    "e-hentai",
    "google",
    "iqdb",
    "saucenao",
    "tracemoe",
    "yandex",
]

[project.urls]
homepage = "https://github.com/kitUIN/PicImageSearch"
repository = "https://github.com/kitUIN/PicImageSearch"

[project.optional-dependencies]
socks = ["socksio>=1.0.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.basedpyright]
pythonVersion = "3.9"

[tool.pdm]
version = { source = "file", path = "PicImageSearch/__init__.py" }

[tool.pdm.build]
includes = ["PicImageSearch"]

[tool.pdm.dev-dependencies]
dev = [
    "basedpyright>=1.28.1",
    "black>=25.1.0",
    "loguru>=0.7.3",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.py" = ["F405", "N813"]

[tool.ruff.lint.pydocstyle]
convention = "google"
